# m2_sdk

./: CMakeLists.txt  README.md  cyclonedds.xml  package.xml  setup_dds_env.sh
examples/: CMakeLists.txt  m2_sensor_echo_dds.cpp  m2_sensor_echo_ros2.cpp
idl/: JointData.idl  JoyData.idl  SensorData.idl
include/: dds_publisher.hpp  dds_subscriber.hpp
msg/: JointData.msg  SensorData.msg
urdf/m2_metal_description/: CMakeLists.txt  package.xml
urdf/m2_metal_description/config/: joint_names_Torso_Subassembly_Mainnihal(completeMODEL).yaml
urdf/m2_metal_description/launch/: display.launch  gazebo.launch
urdf/m2_metal_description/mujoco/: m2_metal.xml  mjmodel.xml  scene.xml
urdf/m2_metal_description/urdf/: m2_metal_description.urdf
urdf/m2_metal_description/xacro/: _d435.urdf.xacro  gazebo.xacro  leg.xacro  robot.xacro  test_d435_camera.urdf.xacro
